updated jenga code

--- a/LTEE-FBA-Jenga.ipynb
+++ b/LTEE-FBA-Jenga.ipynb
@@ -27,6 +27,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## use Gurobi. Necessary for constructing minimal genomes!\n",
+    "cobra_config = cobra.Configuration()\n",
+    "cobra_config.solver = \"gurobi\"\n",
+    "cobra_config"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
